fixed issue with case statement and camera auhtorization