@@ -15,20 +15,10 @@
     </properties>
 
     <dependencies>
-            <dependency>
+        <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv-platform</artifactId>
             <version>1.5.12</version> <!-- Use the latest stable version -->
-        </dependency>
-        <dependency>
-            <groupId>org.bytedeco</groupId>
-            <artifactId>opencv-platform</artifactId>
-            <version>4.9.0-1.5.12</version> <!-- Use the compatible version for your javacv -->
-        </dependency>
-        <dependency>
-            <groupId>org.bytedeco</groupId>
-            <artifactId>ffmpeg-platform</artifactId>
-            <version>7.0-1.5.12</version> <!-- Use the compatible version for your javacv -->
         </dependency>
     </dependencies>
 
@@ -40,7 +30,6 @@
                 <configuration>
                     <source>24</source>
                     <target>24</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
